# book

./: .gitignore  pyproject.toml
blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_comment.py  0003_post_tags.py
blog/templates/blog/: base.html  pagination.html
blog/templates/blog/post/: detail.html  latest_posts.html  list.html
blog/templatetags/: blog_tags.py
mysite/: settings.py  urls.py
